syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (TokenValidationResponse);
  rpc GenerateToken (GenerateTokenRequest) returns (TokenResponse);
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message TokenValidationResponse {
  bool isValid = 1;
  string message = 2;
  Token payload = 3;
}

message Token {
  string sub = 1;
  string email = 2;
  string phone = 3;
  int32 role = 4;
  string name = 5;
}


message TokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message GenerateTokenRequest {
  string id = 1;
  string userAgent = 2;
  string ip = 3;
}


